# iFont

./: .gitignore  README.md  build_audio_pool.py  build_stimulus_pool.py  generate.py  iFont論文草稿_想定結果版_情報処理学会論文誌.docx  iFont関連研究_短時間文字提示と連続提示_情報処理学会論文誌.docx  ifont_common.py  make_audio_stimuli.py  make_subtractive_stills.py  make_subtractive_videos.py  make_videos.py  stroke_counts.csv  stroke_counts_stroke_mask_images_bizud.csv  stroke_counts_stroke_mask_images_bizudmincho.csv  stroke_counts_stroke_mask_images_mplus1p.csv  stroke_counts_stroke_mask_images_notosansjp.csv  stroke_counts_stroke_mask_images_notoserifjp.csv
acoustic_analysis/: .gitignore  analyze_coarticulation.py  analyze_mcd_divergence.py  analyze_rise_contribution.py  coarticulation_result.json  make_fluency_demo.py  mcd_divergence_result.json  rise_contribution_result.json
archive/: DEPRECATED.md  build_audio_chorus_pool.py
bigram_coverage/: .gitignore  analyze_bigram_coverage.py  bigram_coverage_result.json  jpn_sentences.tsv.bz2
docs/: HANDOFF_20260718.md  audio_kana_experiment.md  bigram_coverage_hyakunin.md  coarticulation_analysis.md  completion_code_flow.md  crowdsourcing_yahoo.md  design_revision_260702.md  ethics_application_draft.md  handoff_restart.md  informed_consent.md  intelligibility_metrics_survey.md  mcd_divergence.md  next_phase_2char_audio.md  prereg_interference.md  (+5 more)
ifont_tool/: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
ifont_tool/ifont/: __init__.py  audio.py  cli.py  credits.py  gmodel.py  render.py  video.py
ifont_tool/mcp_server/: server.py
(+106 files in other folders)
